--- a/index.html
+++ b/index.html
@@ -1,13 +1,109 @@
 <!DOCTYPE html>
-    <html> <!--Root element-->
-        <head>
-            <title>My First Web Page</title>
-            <meta name ="description" content="This is a beginer web page"> <!-- meta element is a void element because it has a closing tag-->
-        </head>
-        <body>
-            <h1>My Very First Web Page</h1>
-            <p>I'm excited that this is my first web page</p>
-            <!--How to embbed an image- 1. Get an image an copy it to the folder that you opened the folder you are working on 2. Use image tag denoted by img 3. source attribute denoted by src to show the source of the image 4. The alternate text atribute denoted by alt a piece of text that describes your image just in case it is not displayed 6. To resize your image use the width and height attributes-->
-            <img width="700" height="600" src="Designer (2).jpeg" alt="An image of an enthusiastic VA techie"> 
-        </body>
-    </html>
+<html lang="en">
+    <head>
+        <title>Telehealth</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width initial-scale =1.0">
+        <style></style>
+    </head>
+    <body>
+        <header style="text-align: center;">
+            <h1>Telehealth</h1>
+            <p>Your health, Our priority. Accessible healthcare Anytime, Anywhere.</p>
+            <a href="">Introduction</a>
+            <a href="">About us</a>
+            <a href="">Our Services</a>
+        </header>
+        <br>
+        <p>Connect with trusted healthcare professionals from the comfort of your home.</p>
+        <br>
+        <img width="300" length ="400" src="Image_1.jpg" alt="image of people of african descent engaging in telemedicine">
+        <br>
+        <h2>Introduction</h2> 
+        <p>Welcome to Telehealth, your one-stop solution for convenient and reliable telemedicine services. We bring health to your fingertips, allowing you to consult with experienced doctors and specialists anytime, anywhere. Our mission is to make quality healthcare accessible and affordable to everyone.</p>
+        <p>Why choose telehealth?
+            <ul>
+                <li>Shedule appointments and attend consultations from anywhere.</li>
+                <li>Connect with certified healthcare professionals across various specialties.</li>
+                <li>Your health data is protected with the highest security standards.</li>
+            </ul>
+        </p>
+        <h2>About Us</h2>
+        <p> Our mission: To provide accessible, affordable, and high-quality helathcare to everyone, regardless of location or circumstance.</p>
+        <p>Our vision: A world where healthcare is universally accessible, and everyone has the opportunity to live a healthy life.</p>
+        <p>Our Values:
+            <ul>
+                <li>We put patients first and are committed to providing empathetic care</li>
+                <li>We embrace technology to continuously improve our services</li>
+                <li>We uphold the highest standards of professionalism and ethics</li>
+            </ul>
+        </p>
+        <h2>Our services</h2>
+        <p>The following are among the services offered by telehealth:
+            <ol>
+                <li>Connecting patients with doctors and specialists through secure video calls. Receive professional medical advice, diagnosis and treatment plans</li>
+                <li>Our platform allows you to order medicattions directly from your pharmacy and have them delivered to your doorstep.</li>
+                <li>Access confidential counselling and therapy sessions with licensed psychologists and mental health professionals</li>
+                <li>Manage chronic conditions like diabetes, hypertension and asthma with regular check-ins and personalized care plans.</li>
+                <li>We provide easy referrals and follow-ups with top specialists across various fields</li>
+            </ol>
+        </p>
+        <p>Book Your Consulltation Today</p>
+        <br>
+        <p>Heres a table of some of the doctors we work with willing to give testimonials.</p>
+        <table border="1" style="width:50%">
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+            </tr>
+            <tr> 
+                <th>Dr. Maria</th>
+                <th>Gathoni</th>
+                <th>mgathoni@gmail.com</th>
+                <th>Confidential</th>
+            </tr>
+            <tr>
+                <th>Dr. Patel</th>
+                <th>Sighn</th>
+                <th>patel@gmail.com</th>
+                <th>Confidential</th>
+            </tr>
+            <tr>
+                <th>Dr. John</th>
+                <th>Kiplagat</th>
+                <th>kip@gmail.com</th>
+                <th>Confidential</th>
+            </tr>
+        </table>
+        <p>Fill the form below to get more information:</p>
+        <form action="" method="get">
+            <label for="First Name">First Name:</label>
+            <input type="text" id="First Name" name="First Name">
+            <br>
+            <label for="Middle Name">Middle Name:</label>
+            <input type="text" id="Middle Name" name="Middle Name">
+            <br>
+            <label for="Email">Email:</label>
+            <input type="email" id="Email" name="Email">
+            <br>
+            <label for="Location">Location:</label>
+            <select type="Location" name="Location">
+                <option value="Nairobi">Nairobi</option>
+                <option value="Nakuru">Nakuru</option>
+                <option value="Kisumu">Kisumu</option>
+                <option value="Mombasa">Mombasa</option>
+                <option value="Eldoret">Eldoret</option>
+                <option value="Kisii">Kisii</option>
+                <option value="Kakaemga">Kakamega</option>
+                <option value="Bungoma">Bungoma</option>
+            </select> 
+            <br>
+            <input type="submit" value ="Submit">  
+        </form>
+        <br>
+        <a href="https://google.com">Click Here To Learn More</a>
+    </body>
+</html>
